--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/pp.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/pp.png" alt="dapasigma" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Daffa Rizky Ramadhani</h1>
+          <h1 class="name" title="Richard hanrick">dapasigma</h1>
 
           <p class="title">@darzrm</p>
         </div>
@@ -177,8 +177,7 @@
 
         <section class="about-text">
           <p>
-I'm just a laid-back person seeking peace and quiet. My name is Daffa Rizky Ramadhani from Pemalang, Central Java. I'm interested in football, gaming, music, and movies.
-          </p>
+Just a laid-back person seeking peace and quiet.      </p>
 
 
         </section>
