--- a/index.html
+++ b/index.html
@@ -466,10 +466,19 @@ Just a laid-back person seeking peace and quiet.      </p>
               <span>2023 — 2025</span>
 
               <p class="timeline-text">
-                eFootball Edit Community
+                eFootball Edit Community.
               </p>
             </li>
-            
+          <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Elit Cees</h4>
+
+              <span>2023 — 2025</span>
+
+              <p class="timeline-text">
+                epep.
+              </p>
+                        </li>
           </ol>
 
         </section>
