--- a/index.html
+++ b/index.html
@@ -471,12 +471,12 @@ Just a laid-back person seeking peace and quiet.      </p>
             </li>
           <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Elit Cees</h4>
+              <h4 class="h4 timeline-item-title">-</h4>
 
-              <span>2023 — 2025</span>
+              <span>? — ?</span>
 
               <p class="timeline-text">
-                epep.
+                -
               </p>
                         </li>
           </ol>
